User login log out

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,12 +3,26 @@ en:
   _help: "Help"
   _about: "About"
   _login: "Log in"
+  _logout: "Log out"
   _signup: "Sign up"
   _error: "Error"
   _users: "Users"
+  _account: "Account"
+  _profile: "Profile"
+  _setting: "Settings"
+  please_log_in: "Please log in."
+  new_user?: "New user?"
+  forgot_password: "Forgot password"
+  remember_me: "Remember me on this computer"
+  sign_up_now: "Sign up now!"
+  profile_updated: "Profile updated."
+  user_deleted: "User deleted"
+  user_can_not_delete: "can not delete user"
   the_form_contains: "The form contains"
+  invalid_email_password: "Invalid email/password combination"
   buttons:
     create_new_account: "Create new account"
+    update_profile: "Update profile"
   my_app:
     name: "FELS"
   products:
