User view categories

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,9 @@ en:
   _account: "Account"
   _profile: "Profile"
   _setting: "Settings"
+  _categories: "Categories"
+  _start: "Start"
+  you_have_learned: "You have learned "
   please_log_in: "Please log in."
   new_user?: "New user?"
   forgot_password: "Forgot password"
