--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,9 @@ en:
   _setting: "Settings"
   _categories: "Categories"
   _start: "Start"
+  _finish: "Finish"
+  lesson_updated: "You had successfully finish your lesson"
+  can_not_update_lesson: "can not update lesson"
   user_can_not_take_lesson: "Cannot take lesson"
   you_have_learned: "You have learned "
   please_log_in: "Please log in."
