--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,8 +11,14 @@ en:
   _profile: "Profile"
   _setting: "Settings"
   _categories: "Categories"
+  _words: "Words"
   _start: "Start"
   _finish: "Finish"
+  _filter: "Filter"
+  _learned: "Learned"
+  _not_learn: "Not learn"
+  _select: "Select"
+  _all_words: "All words"
   lesson_updated: "You had successfully finish your lesson"
   can_not_update_lesson: "can not update lesson"
   user_can_not_take_lesson: "Cannot take lesson"
@@ -42,4 +48,8 @@ en:
   users:
     index:
       title: "All users"
-    success_registed: "Successfully registed"  
+    success_registed: "Successfully registed" 
+  filter_type:
+    all_words: "All word"
+    learned: "Learn"
+    not_learn: "Not learn"
