Admin login, logout, delete User

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,17 +24,21 @@ en:
   _not_learn: "Not learn"
   _select: "Select"
   _all_words: "All words"
+  _success: "Successfully"
+  _danger: "Some thing wrong!"
   sign_up_now: "Sign up now!"
+  detelte: "Delete"
+  confirm: "Are you sure?"
   feed: "Feeds"
   follow: "Follow"
   unfollow: "Unfollow"
   follower: "Follower"
   following: "Following"
-
+  verify_admin: "Admin only!"
   view_my_profile: "View my profile"
   welcome: "Welcome to Framgia E-learning System"
   lesson_updated: "You had successfully finish your lesson"
-  user_activity: "learned %{word_count} words at Lesson \"%{category_name}\" at (%{activity_time})."
+  user_activity: "learned %{word_count} words in Lesson \"%{category_name}\" at (%{activity_time})."
   can_not_update_lesson: "can not update lesson"
   user_can_not_take_lesson: "Cannot take lesson"
   you_have_learned: "You have learned %{number}/%{total} words"
