Admin manage words

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,7 @@ en:
   _success: "Successfully"
   _danger: "Some thing wrong!"
   _new_category: "Create new category"
+  _update_category: "Update category"
   sign_up_now: "Sign up now!"
   detelte: "Delete"
   confirm: "Are you sure?"
@@ -39,8 +40,13 @@ en:
   view_my_profile: "View my profile"
   update_category: "Update category"
   category_updated: "Category updated"
+  is_correct: "Correct"
+  content: "Content"
+  remove: "Remove"
+  add_option: "Add option"
+  add_word: "Add word"
   welcome: "Welcome to Framgia E-learning System"
-  lesson_updated: "You had successfully finish your lesson"
+  lesson_updated: "You had successfully finish your lesson with %{number} right answers"
   user_activity: "learned %{word_count} words in Lesson \"%{category_name}\" at (%{activity_time})."
   number_of_words_in_lesson: "Lesson of this category will have %{number} words"
   can_not_update_lesson: "can not update lesson"
